--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.10.1
 annotated-types==0.7.0
 anyio==4.10.0
 certifi==2025.8.3
@@ -16,13 +17,13 @@ mpmath==1.3.0
 networkx==3.5
 numpy==2.3.3
 packaging==25.0
+psutil==7.0.0
 pydantic==2.11.9
 pydantic_core==2.33.2
 PyYAML==6.0.2
 regex==2025.9.1
 requests==2.32.5
 safetensors==0.6.2
-setuptools==80.9.0
 sniffio==1.3.1
 starlette==0.47.3
 sympy==1.14.0
